# meval

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
demos/isic/: demo.py  isic.py  isic_evaluation_report.html  isic_evaluation_results.csv  isic_pr.html  isic_test.csv  isic_test_results.csv  isic_train.csv
demos/mimic/: demo.py  mimic_auroc.html  mimic_evaluation_report.html  mimic_evaluation_results.csv  mimic_results.csv  mimic_roc.html  mimic_spec.html
meval/: __init__.py  _array_types.py  compare_groups.py  config.py  diags.py  group_filter.py  reporting.py  select_groups.py  stats.py
meval/metrics/: AUPRG.py  AUROC.py  Accuracy.py  Average.py  BrierScore.py  ComparisonMetric.py  Count.py  DRMSCE.py  MAE.py  MultiClassAUROC.py  Precision.py  ProportionOfPos.py  Recall.py  Specificity.py  ThresholdSelection.py  __init__.py  _calibration.py  _metrics.py  fastauc.py
tests/: test_auroc_variance_methods.py  test_binary_complement_tests.py  test_comparison_metric_arrays.py  test_demos.py  test_early_stop_permut.py  test_fastauc.py  test_fastauc_integration.py  test_group_combinations.py  test_group_filter.py  test_group_reuse.py  test_model_comparison.py  test_multi_test_correction.py  test_multiauroc.py  test_newcombe_ci.py  test_parallel.py  test_parallel_entry_guard.py  test_per_class_metrics.py  test_pvals.ipynb  test_shuffle_distribution.py  test_shuffle_numba_toggle_integration.py
